Closed Bug 1722485 Opened 4 years ago Closed 4 years ago

SessionStore C++ code should not try to load non-existing browser/ code when it isn't available

Categories

(Firefox :: Session Restore, defect)

All
Android
defect

Tracking

()

RESOLVED FIXED
92 Branch
Tracking Status
firefox92 --- fixed

People

(Reporter: Gijs, Assigned: u608768)

References

Details

Attachments

(1 file)

On Android, we repeatedly (I think once per process or something? I'm hoping it's not once per call...) hit NS_ERROR_FILE_NOT_FOUND for the imports from https://searchfox.org/mozilla-central/source/toolkit/components/sessionstore/SessionStoreFunctions.jsm that try to load the browser SessionStore.jsm .

I'm also a bit confused why this thin wrapper exists - couldn't SessionStore.jsm implement the XPCOM interface here directly, with the C++ code treating this as a "service" in the XPCOM sense? Or does that not work for some reason?

Either way, ISTM we could ifdef the code in C++ that tries to request these JSMs based on MOZ_BUILD_APP_IS_BROWSER or similar, or do a similar thing in JS if that were preferred for some reason.

OS: All → Android
Hardware: Desktop → All

This is a browser-only module, and loading it for storage flushes causes errors
in GeckoView.

Assignee: nobody → kmadan
Status: NEW → ASSIGNED
Pushed by kmadan@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/d1b6a8be9dc6 Only flush session storage if we have SessionStore.jsm, r=nika
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 92 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: