Bug 1722485 - Only flush session storage if we have SessionStore.jsm, r=nika

This is a browser-only module, and loading it for storage flushes causes errors
in GeckoView.

Differential Revision: https://phabricator.services.mozilla.com/D121776